--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,243 @@
+@font-face {
+	font-family: 'Myriad Pro'; 
+	src: url(/font/Myriad_Pro_Regular.OTF); 
+}
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 700;
     color: #7581a1;
+}
+h1 {
+    width: 540px;
+    font-size: 80px;
+    font-weight: 600;
+    color: #192b59;
+    line-height: 90px;
+    margin-bottom: 68px;
+    letter-spacing: -2.2px;
+    padding-top: 168px;
+}
+h2 {
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 60px;
+    color: #192b59;
+}
+h2>span {
+    font-size: 16px;
+    font-weight: 800;
+    color: #1085e4;
+    text-transform: uppercase;
+    display: block;
+    letter-spacing: 3px;
+}
+a {
+    text-decoration: none;
+}
+.wrap {
+    width: 1110px;
+    margin: 0 auto;
+}
+.menu-item, .company-item, .facts-item {
+    list-style-type: none;
+}
+
+
+/* HEADER */
+
+.header {
+    width: 100%;
+    height: 1007px;
+    background-image: url(../img/header_bg.png);
+}
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 53px;
+}
+.menu>ul {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    gap: 42px;
+    letter-spacing: 1.6px;
+    text-transform: uppercase;
+}
+.menu-item>a {
+    color: #6e7ea9;
+}
+.header-box {
+    width: 1110px;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 79px;
+}
+.dashbord {
+    margin-left: 75px;
+}
+
+
+/* COMPANY */
+
+.page-company {
+    display: flex;
+    height: 274px;
+    background-image: url(../img/company_bg.jpg);
+}
+.company-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1110px;
+    margin: 0 auto;
+}
+
+
+/* FACTS */
+
+.page-facts {
+    display: flex;
+    align-items: center;
+    height: 532px;
+    background-image: url(../img/facts_bg.png);
+}
+.page-facts .wrap>h2 {
+    margin: 0 auto;
+    text-align: center;
+    width: 430px;
+    line-height: 1.1em;
+}
+.facts-box {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 61px;
+}
+.facts-item {
+    font-size: 12px;
+    color: #1085e4;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+.facts-item>span {
+    font-size: 60px;
+    color: #bacbdc;
+    display: block;
+    margin-bottom: 8px;
+}
+
+
+
+
+/* BUTTON */
+
+.btn-free {
+    font-size: 12px;
+    letter-spacing: 1.2px;
+    background-color: #1085e4;
+    text-transform: uppercase;
+}
+.btn-primary {
+    font-size: 12px;
+    font-weight: 700;
+    padding: 21px 40.5px;
+    border-radius: 100px;
+    letter-spacing: 2.3px;
+    color: #fff;
+    background-color: #1085e4;
+    cursor: pointer;
+    border: 1px solid #1085e4;
+    text-transform: uppercase;
+}
+.btn-free {
+    font-family: "Myriad Pro";
+    font-weight: 400;
+    color: #fff;
+    letter-spacing: 2.3px;
+    padding: 23px 56.5px;
+}
+.btn-primary:hover {
+    background-color: transparent;
+    color: #1085e4;
+    border: 1px solid #1085e4;
+    transition: .15s;
+}
+.btn-secondary {
+    font-size: 12px;
+    font-weight: 700;
+    padding: 21px 40.5px;
+    margin-left: 17px;
+    border-radius: 100px;
+    letter-spacing: 2.3px;
+    color: #7e8bae;
+    background-color: #cbdbe8;
+    cursor: pointer;
+    border: 1px solid #cbdbe8;
+    text-transform: uppercase;
+}
+.btn-secondary:hover {
+    background-color: transparent;
+    border: 1px solid #cbdbe8;
+    transition: .15s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FOOTER */
+.footer {
+    background-color: #192b59;
+}
+.box-footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+.copyright {
+    font-weight: 400;
+    color: #b6bae0;
+}
+.copyright-link {
+    color: #1085e4;
+    text-transform: uppercase;
+}
+.social {
+    display: flex;
+}
+.footer-item {
+    list-style-type: none;
+    margin-left: 25px;
+}
+.fa-brands {
+    color: #fff;
+}
+.fa-facebook-f:hover {
+    color: #21579b;
+}
+.fa-twitter:hover {
+    color: #00aeef;
+}
+.fa-behance:hover {
+    color: #0077fe;
+}
+.fa-pinterest:hover {
+    color: #ed1b24;
+}
+.fa-foursquare:hover {
+    color: #fa4876;
 }
