--- a/css/main.css
+++ b/css/main.css
@@ -3,241 +3,313 @@
 	src: url(/font/Myriad_Pro_Regular.OTF); 
 }
 body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    color: #7581a1;
-}
-h1 {
-    width: 540px;
-    font-size: 80px;
-    font-weight: 600;
-    color: #192b59;
-    line-height: 90px;
-    margin-bottom: 68px;
-    letter-spacing: -2.2px;
-    padding-top: 168px;
-}
-h2 {
-    font-size: 50px;
-    font-weight: 600;
-    line-height: 60px;
-    color: #192b59;
-}
-h2>span {
-    font-size: 16px;
-    font-weight: 800;
-    color: #1085e4;
-    text-transform: uppercase;
-    display: block;
-    letter-spacing: 3px;
-}
-a {
-    text-decoration: none;
+    width: 1920px;
+    margin: 0 auto;
+    font-family: 'Open Sans', sans-serif;
 }
 .wrap {
     width: 1110px;
     margin: 0 auto;
 }
-.menu-item, .company-item, .facts-item {
-    list-style-type: none;
-}
-
-
-/* HEADER */
-
-.header {
-    width: 100%;
-    height: 1007px;
-    background-image: url(../img/header_bg.png);
-}
-.menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 53px;
-}
-.menu>ul {
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    padding: 0;
-    gap: 42px;
-    letter-spacing: 1.6px;
+span {
+    color: #1371c5;
     text-transform: uppercase;
 }
-.menu-item>a {
-    color: #6e7ea9;
+p {
+    font-size: 16px;
+    font-weight: 400;
 }
-.header-box {
+a {
+    text-decoration: none;
+    color: #6e7ea9;
+    font-weight: bold;
+}
+li {
+    list-style-type: none;
+}
+h1 {
+    font-size: 80px;
+    font-weight: 600;
+    color: #192b59;
+    letter-spacing: -0.03em;
+    line-height: 90px;
+    margin-bottom: 67px;
+}
+
+/******************* HEADER *******************/
+
+
+.header {
+    background-image: url(../img/header_bg.png);
+    height: 1007px;
+}
+.header-top-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+.nav-box {
+    display: flex;
+    gap: 42px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+}
+.header-title-box {
     width: 1110px;
     display: flex;
+    align-items: center;
     margin: 0 auto;
-    margin-top: 79px;
+    
 }
-.dashbord {
-    margin-left: 75px;
+.header-title {
+    min-width: 511px;
+    margin-right: 106px;
+}
+.header-img {
+    padding-top: 79px;
 }
 
 
-/* COMPANY */
 
-.page-company {
+/******************* COMPANY *******************/
+
+.block-company {
+    width: 100%;
+    height: 271px;
     display: flex;
-    height: 274px;
+    align-items: center;
     background-image: url(../img/company_bg.jpg);
 }
 .company-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 1110px;
-    margin: 0 auto;
 }
 
 
-/* FACTS */
 
-.page-facts {
+/******************* GRID *******************/
+
+.grid {
+    display: grid;
+    grid-template-areas: "a b c"
+                         "d b c"
+                         "d f g"
+                         "e f g"
+                         "e h h";
+gap: 20px;
+margin-top: 87px;
+}
+.grid-title {
+    grid-area: a;
+}
+.grid-item-1 {
+    grid-area: b;
+}
+.grid-item-2 {
+    grid-area: c;
+}
+.grid-item-3 {
+    grid-area: d;
+}
+.grid-item-4 {
+    grid-area: e;
+}
+.grid-item-5 {
+    grid-area: f;
+}
+.grid-item-6 {
+    grid-area: g;
+}
+.grid-text {
+    grid-area: h;
+}
+.grid-item {
+    background-color: gray;
+    text-align: center;
+    width: 350px;
+}
+.grid-title {
+    font-size: 40px;
+    font-weight: 700;
+}
+.grid-title>span {
+    display: block;
+    font-size: 14px;
+    font-weight: 800;
+    letter-spacing: 0.2em;
+    padding-bottom: 17px;
+}
+.grid-item>h3 {
+    margin-bottom: 22px;
+}
+.grid-item>p {
+    width: 270px;
+    margin: 0 auto 20px;
+    line-height: 26px;
+    letter-spacing: 0.01em;
+}
+.grid-item>a {
+    color: #1085e4;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/******************* FOOTER *******************/
+
+.footer {
+    height: 69px;
+    background-color: #192b59;
     display: flex;
     align-items: center;
-    height: 532px;
-    background-image: url(../img/facts_bg.png);
 }
-.page-facts .wrap>h2 {
-    margin: 0 auto;
-    text-align: center;
-    width: 430px;
-    line-height: 1.1em;
-}
-.facts-box {
+.footer-box {
     display: flex;
-    justify-content: space-around;
-    margin-top: 61px;
-}
-.facts-item {
-    font-size: 12px;
-    color: #1085e4;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-}
-.facts-item>span {
-    font-size: 60px;
-    color: #bacbdc;
-    display: block;
-    margin-bottom: 8px;
-}
-
-
-
-
-/* BUTTON */
-
-.btn-free {
-    font-size: 12px;
-    letter-spacing: 1.2px;
-    background-color: #1085e4;
-    text-transform: uppercase;
-}
-.btn-primary {
-    font-size: 12px;
-    font-weight: 700;
-    padding: 21px 40.5px;
-    border-radius: 100px;
-    letter-spacing: 2.3px;
-    color: #fff;
-    background-color: #1085e4;
-    cursor: pointer;
-    border: 1px solid #1085e4;
-    text-transform: uppercase;
-}
-.btn-free {
-    font-family: "Myriad Pro";
-    font-weight: 400;
-    color: #fff;
-    letter-spacing: 2.3px;
-    padding: 23px 56.5px;
-}
-.btn-primary:hover {
-    background-color: transparent;
-    color: #1085e4;
-    border: 1px solid #1085e4;
-    transition: .15s;
-}
-.btn-secondary {
-    font-size: 12px;
-    font-weight: 700;
-    padding: 21px 40.5px;
-    margin-left: 17px;
-    border-radius: 100px;
-    letter-spacing: 2.3px;
-    color: #7e8bae;
-    background-color: #cbdbe8;
-    cursor: pointer;
-    border: 1px solid #cbdbe8;
-    text-transform: uppercase;
-}
-.btn-secondary:hover {
-    background-color: transparent;
-    border: 1px solid #cbdbe8;
-    transition: .15s;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* FOOTER */
-.footer {
-    background-color: #192b59;
-}
-.box-footer {
-    display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 10px 0;
 }
-.copyright {
-    font-weight: 400;
-    color: #b6bae0;
+.footer-text {
+    font-family: 'Myriad Pro';
+    color: #fff;
+    letter-spacing: 0.055em;
 }
-.copyright-link {
-    color: #1085e4;
+.social-item {
+    display: flex;
+    gap: 25px;
+}
+.footer-text>a {
+    color: #1371c5;
     text-transform: uppercase;
 }
-.social {
-    display: flex;
-}
-.footer-item {
-    list-style-type: none;
-    margin-left: 25px;
-}
-.fa-brands {
+.social-item>a {
     color: #fff;
 }
 .fa-facebook-f:hover {
     color: #21579b;
 }
 .fa-twitter:hover {
-    color: #00aeef;
+    color: #00ade5;
 }
 .fa-behance:hover {
-    color: #0077fe;
+    color: #0069ff;
 }
 .fa-pinterest:hover {
-    color: #ed1b24;
+    color: #dc1b21;
 }
 .fa-foursquare:hover {
-    color: #fa4876;
+    color: #ff457a;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/******************* BUTTON *******************/
+
+.btn-blue {
+    font-size: 12px;
+    background-color: #1085e4;
+    color: #fff;
+    padding: 20px 52px;
+    border-radius: 50px;
+    border: 1px solid transparent;
+    text-transform: uppercase;
+}
+.btn-blue:hover {
+    background-color: transparent;
+    color: #1085e4;
+    border: 1px solid #1085e4;
+    transition: .2s;
+}
+.btn-started {
+    letter-spacing: 0.19em;
+    padding: 20px 41px;
+}
+.btn-grey {
+    font-size: 12px;
+    background-color: #cbdbe8;
+    color: #7e8bae;
+    margin-left: 16px;
+    padding: 20px 40px;
+    border-radius: 50px;
+    border: 1px solid transparent;
+    text-transform: uppercase;
+    letter-spacing: 0.19em;
+}
+.btn-grey:hover {
+    background-color: transparent;
+    border: 1px solid #cbdbe8;
+    transition: .2s;
+}
+
+
