--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,9 @@ h1 {
     margin-bottom: 67px;
 }
 
+
+
+
 /******************* HEADER *******************/
 
 
@@ -100,10 +103,11 @@ h1 {
                          "e f g"
                          "e h h";
 gap: 20px;
-margin-top: 87px;
+margin-top: 170px;
 }
 .grid-title {
     grid-area: a;
+    margin-top: -50px;
 }
 .grid-item-1 {
     grid-area: b;
@@ -127,9 +131,11 @@ margin-top: 87px;
     grid-area: h;
 }
 .grid-item {
-    background-color: gray;
     text-align: center;
     width: 350px;
+    height: 393px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px #f2f2f2;
 }
 .grid-title {
     font-size: 40px;
@@ -154,24 +160,110 @@ margin-top: 87px;
 .grid-item>a {
     color: #1085e4;
 }
+.img.grid_icon {
+    padding-top: 45px;
+}
+.grid-item h3 {
+    color: #192b59;
+}
+.grid-item p {
+    color: #7581a1;
+    font-size: 16px;
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+.aside {
+    color: #7581a1;
+}
+.grid-author span {
+    font-size: 16px;
+    font-weight: bold;
+    color: #192b59;
+    text-transform: none;
+}
+.grid-author {
+    font-size: 14px;
+    color: #1085e4;
+}
 
 
 
+/******************* SUBSCRIBE *******************/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.block-subscribe {
+    height: 521px;
+    background: linear-gradient(to right, #0A2090, #2377CD);
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+}
+.subscribe-flex {
+    display: flex;
+    align-items: center;
+}
+.subscribe-title {
+    font-size: 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: -0.035em;
+    margin-bottom: 27px;
+}
+.subscribe-title span {
+    display: block;
+    font-size: 14px;
+    font-weight: 800;
+    color: #2377cd;letter-spacing: 0.2em;
+    margin-bottom: 20px;
+}
+.input-subscribe {
+    border: 2px solid #3d52aa;
+    width: 536px;
+    height: 66px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+}
+input {
+    background: transparent;
+    border: none;
+}
+input:focus {
+    outline: 0;
+}
+.subscribe-btn {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.18em;
+    background-color: #1085e4;
+    color: #fff;
+    border: 1px solid transparent;
+    cursor: pointer;
+    padding: 16px 46px;
+    border-radius: 50px;
+}
+.subscribe-btn:hover {
+    background-color: transparent;
+    color: #1085e4;
+    border: 1px solid #fff;
+}
+.email-input {
+    margin-left: 37px;
+    letter-spacing: -0.06em;
+    width: 195px;
+    margin-right: 101px;
+}
+.robot-img {
+    margin-left: 215px;
+}
+.subscribe-intro {
+    font-size: 17px;
+    width: 404px;
+    letter-spacing: 0.025em;
+    line-height: 1.7em;
+    margin-bottom: 34px;
+}
 
 
 
